<resources>
    <string name="app_name">18121772_LiJiaQi_Week09</string>
    <string name="title_task01">Task01</string>
    <string name="title_task02">Task02</string>
    <string name="title_task03">Task03</string>
    <string name="view_account">Account</string>
    <string name="view_password">Password</string>
    <string name="prompt_login">Login</string>
    <string name="hint_account">Enter Acc Here</string>
    <string name="hint_password">Enter PWD Here</string>
    <string name="view_title">Login Page</string>
    <string name="prompt_register">Register</string>
    <string name="view_form">Account Info Page</string>
    <string name="view_nickname">Nickname</string>
    <string name="view_gender">Gender</string>
    <string name="view_age">Age</string>
    <string name="view_hobby">Hobby</string>
    <string name="view_account_info">Account</string>
    <string name="edit_nickname">Enter Nickname Here</string>
    <string name="edit_hobby">Enter Hobby Here</string>
    <string name="prompt_action">Action</string>
    <string name="prompt_submit">Submit</string>
    <string name="prompt_update">Update</string>
    <string name="prompt_return">Return</string>
    <string name="prompt_pull_xml">Pull XML</string>
    <string name="view_hint">PUSH BUTTON TO START</string>
    <string name="title_task03_page">Randomize Database</string>
    <string name="prompt_show_db">Show DB</string>
    <string name="prompt_update_db">Update DB</string>
    <string name="text_quantity">Quantity</string>
    <string-array name="gender_choice">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>