<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Data_Form">

    <TextView
        android:id="@+id/view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_form"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"/>

    <TextView
        android:id="@+id/view_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_nickname"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view_account_info"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/view_account_info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/view_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_gender"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view_nickname"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/view_nickname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <TextView
        android:id="@+id/view_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_age"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view_gender"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/view_gender"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/view_hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_hobby"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view_age"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/view_age"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <TextView
        android:id="@+id/view_account_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_account_info"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/view_account_account"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="ACCOUNT"
        android:textColor="#000000"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/view_account_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_account_info"
        app:layout_constraintTop_toTopOf="@+id/view_account_info"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/edit_nickname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/view_nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toEndOf="@+id/view_nickname"
        app:layout_constraintTop_toTopOf="@+id/view_nickname"
        app:layout_constraintVertical_bias="0.5" />

    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toEndOf="@+id/view_gender"
        app:layout_constraintTop_toTopOf="@+id/view_gender"
        app:layout_constraintVertical_bias="0.5" />

    <Spinner
        android:id="@+id/spinner_age"
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/view_age"
        app:layout_constraintTop_toTopOf="@+id/view_age"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/edit_hobby"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/edit_hobby"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/view_hobby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toEndOf="@+id/view_hobby"
        app:layout_constraintTop_toTopOf="@+id/view_hobby"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#008080"
        android:text="@string/prompt_action"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#D63300"
        android:text="@string/prompt_return"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/button_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toEndOf="@+id/button_action"
        app:layout_constraintTop_toTopOf="@+id/button_action"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>